Fixed spacing for navlinks on sidebar

--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -14,8 +14,6 @@
 
 .content {
   text-align: left;
-  padding: 3vh 1vh 4vh 3vh;
-
 }
 
 .sectionHeader {
@@ -76,21 +74,24 @@
   padding-left: 1vh;
 }
 
-#navLinks {
-  display: flex;
-  flex-direction: column;
-  /* align-items: left; */
-  padding-left: 1vh;
-  padding-top: 1vh;
-  object-fit: contain;
-}
-
 .sidebar {
   grid-area: sidebar;
   display: flex;
   flex-direction: column;
   align-items: left;
 }
+
+.sidebar #navLinks {
+  display: flex;
+  flex-direction: column;
+  padding-left: 4vh;
+  margin-top: 3vh;
+  object-fit: contain;
+  justify-content: space-between;
+  height: 17vmin;
+}
+
+
 
 
 #about {
@@ -112,9 +113,8 @@ a {
   background-color: #FFFFFF;
   color: #2C2A2D;
   display: grid;
-  width: 100%;
-  grid-template-columns: 12vmin repeat(2, 42vmin);
-  grid-template-rows: 30vmin repeat(2, 35vmin); 
+  grid-template-columns: 20vmin auto auto;
+  grid-template-rows: 35vmin auto auto; 
   grid-template-areas: 
   'sidebar header  header'
   'sidebar news    releases'
